AN-105: Fix barcode height (50 is too high!)

--- a/als/lims/browser/stickers/ALS.css
+++ b/als/lims/browser/stickers/ALS.css
@@ -24,7 +24,6 @@
 
 .barcode {
     width: 42mm !important;
-    padding:0 1mm 0 0;
 }
 .barcode object {
     width: 42mm !important;
